2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* src/win/wgnuplib.h src/win/wgraph.c term/win.trm: Add the option
	"close" to the windows terminal driver. Update documentation
	accordingly.

2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* term/win.trm: Fix for windows terminal ignoring explicit fontname and
	size for labels.

2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* src/win/wmenu.c (SendMacro): Bugfix in call to _getcwd.

2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* term/win.trm: Add the options "size" and "position" to the windows
	terminal driver. Update documentation accordingly.

2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* src/win/wgraph.c: Update code to copy to clipboard as enhanced
	metafile, add Ctrl+C shortcut for graph window.
	
	* term/win.trm: Update documentation accordingly.

2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* src/win/wgraph.c src/win/wresourc.h: Add the possibility to
	save the current graph window as EMF file. Add a Ctrl+S shortcut for
	the graph window and add an entry to the window's system menu.
	
	* term/win.trm: Update documentation accordingly.

2010-02-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_obj): Sanity check start and end angles of arc.

2010-02-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_boxes): Amazingly old bug that fails to apply
	absolute boxwidth in the case where previous point was undefined.

2010-02-08  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/win/wgnuplib.h src/win/wgraph.c term/win.trm:
	Monochrome option of win terminal seems to have no effect.
	    set term win mono
	    plot x
	draws a red line. I think the timing of calling ReadGraphini() is not
	correct. This should be done only once on first entry before setting
	the terminal options.

2010-02-07  Ethan A Merritt  <merritt@u.washington.edu>
